File paths adjusted to enable image rendering in github pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2 class="question">What is Frontend Mentor, and how will it help me?</h2> 
         <button class="accordion-btn">
           <img src="./assets/images/icon-plus.svg" alt="" class="icon">
-          <img src="/assets/images/icon-minus.svg" alt="" class="icon2">
+          <img src="./assets/images/icon-minus.svg" alt="" class="icon2">
         </button>
       </div>
       <p class="answer answer-js">
@@ -33,7 +33,7 @@
         <h2 class="question">Is Frontend Mentor free?</h2> 
         <button class="accordion-btn">
           <img src="./assets/images/icon-plus.svg" alt="" class="icon">
-          <img src="/assets/images/icon-minus.svg" alt="" class="icon2">
+          <img src="./assets/images/icon-minus.svg" alt="" class="icon2">
         </button>
       </div>
       <p class="answer answer-js">
@@ -46,7 +46,7 @@
         <h2 class="question">Can I use Frontend Mentor projects in my portfolio?</h2> 
         <button class="accordion-btn">
           <img src="./assets/images/icon-plus.svg" alt="" class="icon">
-          <img src="/assets/images/icon-minus.svg" alt="" class="icon2">
+          <img src="./assets/images/icon-minus.svg" alt="" class="icon2">
         </button>
       </div>
       <p class="answer answer-js">
@@ -59,7 +59,7 @@
         <h2 class="question">How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>  
         <button class="accordion-btn">
           <img src="./assets/images/icon-plus.svg" alt="" class="icon">
-          <img src="/assets/images/icon-minus.svg" alt="" class="icon2">
+          <img src="/.assets/images/icon-minus.svg" alt="" class="icon2">
         </button>
       </div>
       <p class="answer answer-js">
