Path for last accordion and readme file content updated

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2 class="question">How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>  
         <button class="accordion-btn">
           <img src="./assets/images/icon-plus.svg" alt="" class="icon">
-          <img src="/.assets/images/icon-minus.svg" alt="" class="icon2">
+          <img src="./assets/images/icon-minus.svg" alt="" class="icon2">
         </button>
       </div>
       <p class="answer answer-js">
