buttons assigned aria-label

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="accordion-div">
       <div class="question-and-icon question-and-icon-js">
         <h2 class="question">What is Frontend Mentor, and how will it help me?</h2> 
-        <button class="accordion-btn">
+        <button class="accordion-btn" aria-label="expand-and-collapse">
           <img src="./assets/images/icon-plus.svg" alt="" class="icon">
           <img src="./assets/images/icon-minus.svg" alt="" class="icon2">
         </button>
@@ -31,7 +31,7 @@
     <div class="accordion-div">
       <div class="question-and-icon question-and-icon-js">
         <h2 class="question">Is Frontend Mentor free?</h2> 
-        <button class="accordion-btn">
+        <button class="accordion-btn" aria-label="expand-and-collapse">
           <img src="./assets/images/icon-plus.svg" alt="" class="icon">
           <img src="./assets/images/icon-minus.svg" alt="" class="icon2">
         </button>
@@ -44,7 +44,7 @@
     <div class="accordion-div">
       <div class="question-and-icon question-and-icon-js">
         <h2 class="question">Can I use Frontend Mentor projects in my portfolio?</h2> 
-        <button class="accordion-btn">
+        <button class="accordion-btn" aria-label="expand-and-collapse">
           <img src="./assets/images/icon-plus.svg" alt="" class="icon">
           <img src="./assets/images/icon-minus.svg" alt="" class="icon2">
         </button>
@@ -57,7 +57,7 @@
     <div class="accordion-div">
       <div class="question-and-icon question-and-icon-js">
         <h2 class="question">How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>  
-        <button class="accordion-btn">
+        <button class="accordion-btn" aria-label="expand-and-collapse">
           <img src="./assets/images/icon-plus.svg" alt="" class="icon">
           <img src="./assets/images/icon-minus.svg" alt="" class="icon2">
         </button>
